Bug 131326 - Formula to Value does not automatically change text in input line (formula bar)
Summary: Formula to Value does not automatically change text in input line (formula bar)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.2.1 rc
Hardware: All All
: medium trivial
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-13 09:49 UTC by Mike Kaganski
Modified: 2022-08-21 13:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-03-13 09:49:08 UTC
1. Put "=1" into A1
2. Select A1
3. Data->Calculate->Formula to Value

The text in input line is still "=1"; re-selecting (simply clicking on A1 again), or switching from and back to Calc, refreshes it.
Comment 1 Xavier Van Wijmeersch 2020-03-13 15:42:12 UTC
can reproduce with

Version: 7.0.0.0.alpha0+
Build ID: 0436896da915ad2834ba39cb648bdfeb2495fb21
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 QA Administrators 2022-03-14 03:34:32 UTC Comment hidden (obsolete)
Comment 3 Commit Notification 2022-08-21 12:59:52 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/82b27fabfe20e504233bdb0bac860266270bd6f6

tdf#131326 - Invalidate cell slots and update input line with new content

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.