tdf#131326 - Invalidate cell slots and update input line with new content

Change-Id: I4881b73bb230380388ed366818d7e0808aec11e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138065
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>